# ComfyUI-Orpheus

./: README.md  nodes.py  orpheus-config.json  pyproject.toml  snac-24khz-config.json
.github/workflows/: publish.yml
example_workflows/: multi-segment-clone.json  single-segment-clone.json  tts.json
web/: orpheus.js
